# dj-notification

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  run_project.sh
.junie/: guidelines.md
common/: __init__.py  markdown.py
configuration/: admin.py  apps.py  mixins.py  models.py  tests.py
configuration/migrations/: 0002_remove_provider_config_schema_and_more.py  0003_auto_20250926_2227.py  0004_template.py  0005_service.py  0006_alter_template_add_service_and_remove_service_templates.py  0007_notification.py  0008_alter_service_api_key.py
configuration/schema/: config.py  request.py
dj_notificattion/: asgi.py  settings.py  urls.py  wsgi.py
notification/: apps.py  models.py
notification/migrations/: 0001_initial.py  0002_remove_provider_config_schema_and_more.py  0003_auto_20250926_2227.py  0004_template.py  0005_service.py  0006_alter_template_add_service_and_remove_service_templates.py  0007_notification.py  0008_alter_service_api_key.py
