[tool.poetry]
name = "dj-notificattion"
version = "0.1.0"
description = ""
authors = ["Ndifreke Ekott <ndy40.ekott@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.6,<6.0.0"
psycopg = {version = ">=3.2,<4.0", extras = ["binary"]}
djangorestframework = ">=3.15,<4.0"
drf-spectacular = ">=0.27,<1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
